# eval-analysis-public

./: .dockerignore  .editorconfig  .gitignore  CODEOWNERS  README.md  dvc.yaml  example_analysis.ipynb  matplotlibrc  params.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/scripts/: compare_plots.py
.github/workflows/: ci.yml  plot_comparison.yml  sync-data.yml
conf/: config.yaml
conf/figs/: overtime.yaml
conf/report/: deepseek.yaml  overtime.yaml
conf/stages/: deepseek.yaml  overtime.yaml
data/: .gitignore
data/processed/: ga_swebench_comparison_table.tex
fig_params/: figs.yaml
metrics/: baseline_statistics.yaml  multiverse_boxplot.yaml
metrics/costs/: savings_info.csv  savings_non_bucketed_info.csv
metrics/horizon_trend/: .gitignore
plots/: .gitignore
plots/logistic/: .gitignore
plots/logistic_individual/: .gitignore
src/: calculate_baseline_statistics.py  fetch_swe_bench_runs.py  filter_aird_runs.py  filter_out_partial_agents.py  ga_swebench_comparison_table.py
src/plot/: bar_by_time_allocation.py  bar_chart.py  bar_chart_weighted_scores.py  bootstrap_ci.py  cost.py  generate_model_task_table.py  individual_binned_residuals.py  individual_histograms.py  individual_qqs.py  logistic.py  logistic_alternative_fits.py  logistic_individual.py  logistic_multiverse.py  messiness.py  multiverse_boxplot.py  score_at_k.py  success_correlations.py  success_rates.py  success_trend_by_messiness.py  (+2 more)
tests/: test_bootstrap.py  test_calculate_baseline_statistics.py  test_logistic.py  test_statistics.py
(+11 files in other folders)
